--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Jackie McLean & Dom Scandinaro are getting married on January 30th, 2016 in Punta Cana, Dominican Republic.">
+    <meta name="description" content="Jackie McLean &amp; Dom Scandinaro are getting married on January 30th, 2016 in Punta Cana, Dominican Republic.">
     <meta name="author" content="Dom Scandinaro">
 
-    <title>Jackie & Dom Get Hitched</title>
+    <title>Jackie &amp; Dom Get Hitched</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
