encoded use of &

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- Page Content -->
     <div class="container">
         <div class="intro-text">
-            <p>Jackie & Dom</p>
+            <p>Jackie &amp; Dom</p>
             <p>Jan. 30th, 2016</p>
             <p>Punta Cana</p>
             <img width="60px" src="img/rings.png" />
