Combined google font includes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Jackie McLean &amp; Dom Scandinaro are getting married on January 30th, 2016 in Punta Cana, Dominican Republic.">
     <meta name="author" content="Dom Scandinaro">
-
     <title>Jackie &amp; Dom Get Hitched</title>
 
     <!-- Bootstrap Core CSS -->
@@ -17,10 +16,10 @@
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
 
-    <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Playball|Oswald' rel='stylesheet' type='text/css'>
 
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-
+    <!-- Fav icon -->
     <link rel="shortcut icon" type="image/png" href="img/fav.png"/>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
