added img alt tags and updated with to not include "px"

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p>Jackie &amp; Dom</p>
             <p>Jan. 30th, 2016</p>
             <p>Punta Cana</p>
-            <img width="60px" src="img/rings.png" />
+            <img alt="rings" width="60" src="img/rings.png" />
         </div>
     </div>
     <!-- /.container -->
@@ -91,10 +91,10 @@
                 </div>
                 <div class="modal-body">
                     <p class="oswald">Jackie McLean</p>
-                    <img width="50%" src="img/jackie.jpg" />
+                    <img alt="Jackie" width="50%" src="img/jackie.jpg" />
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <p class="oswald">Dom Scandinaro</p>
-                    <img width="50%" src="img/dom.jpg" />
+                    <img alt="Dom" width="50%" src="img/dom.jpg" />
                     <p>Dom is a software engineer from Pittsburgh, PA.  He is a die hard Steelers, Penguins, and Pirates fan and constantly reminds Jackie how many super bowls the Steelers have won.  Shortly after Jackie moved to Chicago Dom was golfing at the same course he did all summer when he noticed a beautiful new bartender.  When she was taking care of him and a couple of his friends, he asked her to the Rainforest Cafe for a date as part of a bet.  Dom told Jackie that he had a special reserved table near the monkeys and that he was a regular.  Jackie was very intrigued and decided to say yes.  About 30 minutes after their first date ended Dom asked Jackie out on a second date, and the rest was history!</p>
                  </div>
             </div>
@@ -111,7 +111,7 @@
                 <div class="modal-body">
                     <p>The most recent Instagram photos tagged with #JackieAndDomGetHitched will show in the album below.</p>
                     <div class="instagram">
-                        <img width= "75%" id="instagram-photo" />
+                        <img alt="Instagram" width="75%" id="instagram-photo" />
                         <div class="oswald">#JackieAndDomGetHitched</div>
                         <div class="btn-group">
                             <button onclick="lastPhoto()" type="button" class="btn btn-default" aria-label="Left"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></button>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="center">
-                        <img width="70%" src="img/map.jpg" />
+                        <img alt="Map" width="70%" src="img/map.jpg" />
                     </div>
                     <p>On November 7th, 2015 Dom took Jackie for a walk to the bean after work.  Once they arrived he put headphones on her and a special mix of some of their favorite songs began playing.  After listening to music for a few minutes while staring at the bean Dom got down on one knee and popped the question.  Many spectators began yelling and chearing in excitement, and before Dom could even finish asking the question Jackie was already saying YES!  They then spent a private weekend together while only sharing the news with their close friends and family before making it public knowledge the following week.</p>
                 </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="center">
-                        <img src="img/dreams.jpg" width="90%"/>
+                        <img alt="Dreams Punta Cana" src="img/dreams.jpg" width="90%"/>
                     </div>
                     <p>We have decided on a destination wedding in the Dominican Republic. In February 2015 we traveled to the Dominican to look at resorts and absolutely fell in love with Dreams Punta Cana.</p>
                     <p>On Saturday, January 30th, 2016 we will be getting married on the beach at <a target="_blank" href="http://www.dreamsresorts.com/punta-cana">Dreams Punta Cana</a>.  The ceremony will be followed by a private reception at a beautiful rooftop venue overlooking the ocean.</p>
