Added src for Instagram img

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="modal-body">
                     <p>The most recent Instagram photos tagged with #JackieAndDomGetHitched will show in the album below.</p>
                     <div class="instagram">
-                        <img alt="Instagram" width="75%" id="instagram-photo" />
+                        <img alt="Instagram" width="75%" id="instagram-photo" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" />
                         <div class="oswald">#JackieAndDomGetHitched</div>
                         <div class="btn-group">
                             <button onclick="lastPhoto()" type="button" class="btn btn-default" aria-label="Left"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></button>
