--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Jackie McLean &amp; Dom Scandinaro are getting married on January 30th, 2016 in Punta Cana, Dominican Republic.">
     <meta name="author" content="Dom Scandinaro">
     <title>Jackie &amp; Dom Get Hitched</title>
