--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                         Thank you! Your RSVP has been transmitted to Jackie & Dom.
                     </div>
 
-                    <div id="rsvp-error" class="alert alert-danger alert-dismissible" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <div id="rsvp-error" class="alert alert-danger" role="alert">
                         <span id="rsvp-error-text"></span>
                     </div>
 
