updated wedding details to include apple vacations information

--- a/index.html
+++ b/index.html
@@ -216,10 +216,7 @@
                     </div>
                     <p>We have decided on a destination wedding in the Dominican Republic. In February 2015 we traveled to the Dominican to look at resorts and absolutely fell in love with Dreams Punta Cana.</p>
                     <p>On Saturday, January 30th, 2016 we will be getting married on the beach at <a target="_blank" href="http://www.dreamsresorts.com/punta-cana">Dreams Punta Cana</a>.  The ceremony will be followed by a private reception at a beautiful rooftop venue overlooking the ocean.</p>
-                    <p>We are currently working with a travel agency to get the best rates possible for all of guests.  Please check back shortly for more information.</p>
-                    <div class="clear-pad-15 center">
-                        <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
-                    </div>
+                    <p>We have finished working with Apple Vacations to work out the travel arrangements/discounts.  Please visit <a target="_blank" href="https://www.signup4.net/Public/ap.aspx?EID=MCLE24E">our travel site</a> to reserve a room in our block.  $100 is required as a deposit, but you lock in today's rates, while not being required to pay in full until November.</p>
                 </div>
             </div>
         </div>
