--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a data-toggle="modal" data-target="#theCouple" href="#">The Couple</a>
+                        <a data-toggle="modal" data-target="#theCouple" onclick="ga('send', 'pageview', '/the-couple')" href="#">The Couple</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#photos" href="#">Photos</a>
+                        <a data-toggle="modal" data-target="#photos" onclick="ga('send', 'pageview', '/photos')" href="#">Photos</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#proposal" href="#">Proposal</a>
+                        <a data-toggle="modal" data-target="#proposal" onclick="ga('send', 'pageview', '/proposal')" href="#">Proposal</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#rsvp" href="#">RSVP</a>
+                        <a data-toggle="modal" data-target="#rsvp" onclick="ga('send', 'pageview', '/rsvp')" href="#">RSVP</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#details" href="#">Wedding Details</a>
+                        <a data-toggle="modal" data-target="#details" onclick="ga('send', 'pageview', '/wedding-details')" href="#">Wedding Details</a>
                     </li>
                 </ul>
             </div>
