--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <li>
                         <a data-toggle="modal" data-target="#details" onclick="ga('send', 'pageview', '/wedding-details')" href="#">Wedding Details</a>
                     </li>
+                    <li>
+                        <a data-toggle="modal" data-target="#party" onclick="ga('send', 'pageview', '/wedding-party')" href="#">Wedding Party</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -217,6 +220,34 @@
                     <p>We have decided on a destination wedding in the Dominican Republic. In February 2015 we traveled to the Dominican to look at resorts and absolutely fell in love with Dreams Punta Cana.</p>
                     <p>On Saturday, January 30th, 2016 we will be getting married on the beach at <a target="_blank" href="http://www.dreamsresorts.com/punta-cana">Dreams Punta Cana</a>.  The ceremony will be followed by a private reception at a beautiful rooftop venue overlooking the ocean.</p>
                     <p>We have finished working with Apple Vacations to work out the travel arrangements/discounts.  Please visit <a target="_blank" href="https://www.signup4.net/Public/ap.aspx?EID=MCLE24E">our travel site</a> to reserve a room in our block.  $100 is required as a deposit, but you lock in today's rates, while not being required to pay in full until November.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="party" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Wedding Party</h4>
+                </div>
+                <div class="modal-body">
+                    <h1 class="oswald">Jessie McLean</h1>
+                    <img alt="Jessie" width="50%" src="img/jessie.jpg" />
+                    <ul>
+                        <li><strong>relationship:</strong> sister</li>
+                        <li><strong>this:</strong> that</li>
+                    </ul>
+                    <h1 class="oswald">Jeff Miller-Tomaino</h1>
+                    <img alt="Jeff" width="50%" src="img/jeff.jpg" />
+                    <ul>
+                        <li><strong>relationship:</strong> best friend</li>
+                        <li><strong>this:</strong> that</li>
+                    </ul>
+                    <div class="clear-pad-15 center">
+                        <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
+                    </div>
                 </div>
             </div>
         </div>
