added info about Jeff and ability to request a song if you are attending

--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
 
                         <div class="clear-pad-15"></div>
 
+                        <input class="form-control" type="text" id="rsvp-song" placeholder="Reception Song Request (optional)" />
+
+                        <div class="clear-pad-15"></div>
+
                         <div class="right">
                             <button type="button" id="rsvp-submit" class="btn btn-info">submit</button>
                         </div>
@@ -235,16 +239,14 @@
                 <div class="modal-body">
                     <h1 class="oswald">Jessie McLean</h1>
                     <img alt="Jessie" width="50%" src="img/jessie.jpg" />
-                    <ul>
-                        <li><strong>relationship:</strong> sister</li>
-                        <li><strong>this:</strong> that</li>
-                    </ul>
+                    <p>write things here.</p>
                     <h1 class="oswald">Jeff Miller-Tomaino</h1>
                     <img alt="Jeff" width="50%" src="img/jeff.jpg" />
-                    <ul>
-                        <li><strong>relationship:</strong> best friend</li>
-                        <li><strong>this:</strong> that</li>
-                    </ul>
+                    <p>Jeff & Dom met when they were 3 years old playing soccer together in Forest Hills.  Jeff & Dom
+                        became very close friends when Jeff transferred to St. Maurice for grade school.  They went on to
+                        play soccer together at Central Catholic High School, and grew into true best friends.  Post High
+                        School they went their separate ways, but their friendship showed its true strength and they have
+                        remained close friends.  Dom was the best man at Jeff's wedding in 2011.</p>
                     <div class="clear-pad-15 center">
                         <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
                     </div>
