added the wedding party

--- a/index.html
+++ b/index.html
@@ -239,17 +239,33 @@
                 <div class="modal-body">
                     <h1 class="oswald">Jessie McLean</h1>
                     <img alt="Jessie" width="50%" src="img/jessie.jpg" />
-                    <p>write things here.</p>
+                    <div class="clear-pad-5"></div>
+                    <strong>Maid of Honor and Sister of the Bride</strong>
+                    <div class="clear-pad-5"></div>
+                    <p>On Jackie's big day she can't imagine anyone else to stand by her side than her big sister, Jessie Lynn.</p>
+                    <p>Jessie and Jackie’s story began when Jessie received a phone call from the hospital saying her
+                        baby sister had just been born. Jessie was so excited to meet her baby sister until she heard she
+                        had "no top lip" (it was just small, guys!).</p>
+                    <p>Being sisters, they had their ups and downs. Whether it was pulling each other's hair out or holding
+                        it up in times of need, they created memories that will forever be cherished.</p>
+                    <p>Cheers to the Maid of Honor, sister of the bride and more importantly, Jackie's best friend.</p>
+                    <p>Love you, mean it!</p>
+                    <div class="clear-pad-15"></div>
                     <h1 class="oswald">Jeff Miller-Tomaino</h1>
                     <img alt="Jeff" width="50%" src="img/jeff.jpg" />
-                    <p>Jeff & Dom met when they were 3 years old playing soccer together in Forest Hills.  Jeff & Dom
-                        became very close friends when Jeff transferred to St. Maurice for grade school.  They went on to
-                        play soccer together at Central Catholic High School, and grew into true best friends.  Post High
-                        School they went their separate ways, but their friendship showed its true strength and they have
-                        remained close friends.  Dom was the best man at Jeff's wedding in 2011.</p>
-                    <div class="clear-pad-15 center">
-                        <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
-                    </div>
+                    <div class="clear-pad-5"></div>
+                    <strong>Best Man and Life Long Friend of Groom</strong>
+                    <div class="clear-pad-5"></div>
+                    <p>Dom and Jeff have been friends since they both aspired to be the next USA Olympic soccer players
+                        at the ripe age of three. As they grew, so did their friendship creating memories throughout high school.</p>
+                    <p>Dom and Jeff both went off to college in different states yet their friendship remained strong.
+                        It could be months, even years since they’ve seen each other but they always picked up right where they left off.</p>
+                    <p>Jeff asked Dom to be his best man for his wedding and now Dom is extremely happy to have Jeff by
+                        his side on his special day. More importantly, he is looking forward to the speech, as Dom gave
+                        a "quite memorable" one at Jeff's wedding.</p>
+                    <p>Cheers to the Best Man and the best friend a man could ask for!</p>
+                    <div class="clear-pad-15 center"></div>
+                    <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
                 </div>
             </div>
         </div>
