added wedding registry

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <li>
                         <a data-toggle="modal" data-target="#party" onclick="ga('send', 'pageview', '/wedding-party')" href="#">Wedding Party</a>
                     </li>
+                    <li>
+                        <a data-toggle="modal" data-target="#registry" onclick="ga('send', 'pageview', '/registry')" href="#">Registry</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -266,6 +269,30 @@
                     <p>Cheers to the Best Man and the best friend a man could ask for!</p>
                     <div class="clear-pad-15 center"></div>
                     <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="registry" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Our Registry</h4>
+                </div>
+                <div class="modal-body">
+                    <img alt="honeyfund" width="100%" src="img/honeymoon.jpg" />
+                    <p>Hello family and friends,</p>
+                    <p>We are honored to share our special day with you. If you are traveling with us for our destination
+                        wedding your presence is the absolute best gift we could ever ask for.</p>
+                    <p>Some of our family and friends are unable to go and have asked how they could help, so we've
+                        created this honeyfund to give ideas on ways we would love to enhance the most important trip of our
+                        lives. We are grateful to be surrounded by such wonderful people, and we cannot wait to celebrate
+                        with you all.</p>
+                    <p class="larger-font center">
+                        <a target="_blank" href="http://www.honeyfund.com/wedding/jackieanddomgethitched">Our Honeyfund</a>
+                    </p>
                 </div>
             </div>
         </div>
