--- a/index.html
+++ b/index.html
@@ -226,7 +226,11 @@
                     </div>
                     <p>We have decided on a destination wedding in the Dominican Republic. In February 2015 we traveled to the Dominican to look at resorts and absolutely fell in love with Dreams Punta Cana.</p>
                     <p>On Saturday, January 30th, 2016 we will be getting married on the beach at <a target="_blank" href="http://www.dreamsresorts.com/punta-cana">Dreams Punta Cana</a>.  The ceremony will be followed by a private reception at a beautiful rooftop venue overlooking the ocean.</p>
-                    <p>We have finished working with Apple Vacations to work out the travel arrangements/discounts.  Please visit <a target="_blank" href="https://www.signup4.net/Public/ap.aspx?EID=MCLE24E">our travel site</a> to reserve a room in our block.  $100 is required as a deposit, but you lock in today's rates, while not being required to pay in full until November.</p>
+                    <p>Our room block with Apple Vacations is now full.  If you are still trying to book a room our Apple Vacations travel agent, Monica Higgins, would be happy to help you.
+                    You can contact her via phone or email and she will do her best to respond within a few business days and assist you with getting the best deal currently available on a room
+                    at our resort.  You can contact her via phone 610-325-1844 or email mhiggins@applevac.com.</p>
+                    <p>If you reserved a room through our room block you are required to pay the remaining balance before November 17th. Please contact Monica to either pay your remaining balance
+                    in full or break up payments as you'd like.</p>
                 </div>
             </div>
         </div>
