Added resort attire

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         <a data-toggle="modal" data-target="#party" onclick="ga('send', 'pageview', '/wedding-party')" href="#">Wedding Party</a>
                     </li>
                     <li>
+                        <a data-toggle="modal" data-target="#attire" onclick="ga('send', 'pageview', '/resort-attire')" href="#">Resort Attire</a>
+                    </li>
+                    <li>
                         <a data-toggle="modal" data-target="#registry" onclick="ga('send', 'pageview', '/registry')" href="#">Registry</a>
                     </li>
                 </ul>
@@ -231,6 +234,38 @@
                     at our resort.  You can contact her via phone 610-325-1844 or email mhiggins@applevac.com.</p>
                     <p>If you reserved a room through our room block you are required to pay the remaining balance before November 17th. Please contact Monica to either pay your remaining balance
                     in full or break up payments as you'd like.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div id="attire" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Resort Attire</h4>
+                </div>
+                <div class="modal-body">
+                    <h1 class="oswald">Dining At Dreams Punta Cana</h1>
+                    <p>The Dreams website has included have a dress code for dinner at A la Carte restaurants. 
+To give you a general idea the dress code consists of:</p>
+                    <ul>
+                        <li>full length pants and a sleeved and collared shirt for men</li>
+                        <li>tasteful attire for women</li>
+                        <li>Jeans and Flip flops are not allowed in A La Carte Restaurants</li>
+                    </ul>
+                    <div class="clear-pad-15"></div>
+                    <h1 class="oswald">The Scandinaro Wedding at Dreams Punta Cana</h1>
+                    <ul>
+                        <li>We are asking all guests to arrive in cocktail apparel.</li>
+                        <li>Jackets are not required for men.</li>
+                        <li>Our ceremony is on the beach- shoes will be optional</li>
+                    </ul>
+                    <p>For the reception, we want to notify you that it will be held on a roof top. Be mindful that although we are in the Dominican it can get a bit windy. Pants for men and a shawl or light sweater for the ladies are suggested</p>
+                    <p>You will have about 15 minutes before cocktail hour begins to change, if needed. </p>
+                    <div class="clear-pad-15 center"></div>
+                    <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
                 </div>
             </div>
         </div>
