--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a data-toggle="modal" data-target="#rsvp" onclick="ga('send', 'pageview', '/rsvp')" href="#">RSVP</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" data-target="#details" onclick="ga('send', 'pageview', '/wedding-details')" href="#">Wedding Details</a>
+                        <a data-toggle="modal" data-target="#details" onclick="ga('send', 'pageview', '/wedding-details')" href="#">Details</a>
                     </li>
                     <li>
                         <a data-toggle="modal" data-target="#party" onclick="ga('send', 'pageview', '/wedding-party')" href="#">Wedding Party</a>
