updated resort attire section

--- a/index.html
+++ b/index.html
@@ -247,25 +247,18 @@
                     <h4 class="modal-title">Resort Attire</h4>
                 </div>
                 <div class="modal-body">
-                    <h1 class="oswald">Dining At Dreams Punta Cana</h1>
-                    <p>The Dreams website has included have a dress code for dinner at A la Carte restaurants. 
-To give you a general idea the dress code consists of:</p>
-                    <ul>
-                        <li>full length pants and a sleeved and collared shirt for men</li>
-                        <li>tasteful attire for women</li>
-                        <li>Jeans and Flip flops are not allowed in A La Carte Restaurants</li>
-                    </ul>
-                    <div class="clear-pad-15"></div>
-                    <h1 class="oswald">The Scandinaro Wedding at Dreams Punta Cana</h1>
-                    <ul>
-                        <li>We are asking all guests to arrive in cocktail apparel.</li>
-                        <li>Jackets are not required for men.</li>
-                        <li>Our ceremony is on the beach- shoes will be optional</li>
-                    </ul>
-                    <p>For the reception, we want to notify you that it will be held on a roof top. Be mindful that although we are in the Dominican it can get a bit windy. Pants for men and a shawl or light sweater for the ladies are suggested</p>
-                    <p>You will have about 15 minutes before cocktail hour begins to change, if needed. </p>
-                    <div class="clear-pad-15 center"></div>
-                    <a data-toggle="modal" data-dismiss="modal" data-target="#rsvp" href="#">Please click here to RSVP</a>
+                    <p>Please be aware of the Dress Code for the Resort Restaurants.</p>
+                    <h1>Lunch Attire:</h1>
+                    <p>Sandals/flip flops are required. Men, a shirt must be worn. Ladies, a cover up must be worn.</p>
+                    <h1>Dinner Attire:</h1>
+                    <p>Sneakers/tennis shoes and dress shirts with short or long sleeves or Polo shirts are required for men. Long pants are required for men. No sleeveless shirts or flip-flops allowed.</p>
+                    <h1>Wedding Attire:</h1>
+                    <p>Please dress in <strong>Cocktail Attire</strong>. Swimwear/trunks is not acceptable.</p>
+                    <strong>Beach Ceremony:</strong>
+                    <p>There will be an area to take off your shoes/sandals before being seated in the sand, if desired.
+After the group photo (surprise) is taken, there will be about 30 minutes in between the ceremony and the cocktail hour. This will give you plenty of time to freshen up, change or switch shoes if desired. </p>
+                    <strong>Reception:</strong>
+                    <p>The reception is outdoors. Bring a jacket or shawl in case it is breezy.  Pants are preferred for men but not required.</p>
                 </div>
             </div>
         </div>
