--- a/index.html
+++ b/index.html
@@ -248,16 +248,16 @@
                 </div>
                 <div class="modal-body">
                     <p>Please be aware of the Dress Code for the Resort Restaurants.</p>
-                    <h1>Lunch Attire:</h1>
+                    <h4>Lunch Attire:</h4>
                     <p>Sandals/flip flops are required. Men, a shirt must be worn. Ladies, a cover up must be worn.</p>
-                    <h1>Dinner Attire:</h1>
+                    <h4>Dinner Attire:</h4>
                     <p>Sneakers/tennis shoes and dress shirts with short or long sleeves or Polo shirts are required for men. Long pants are required for men. No sleeveless shirts or flip-flops allowed.</p>
-                    <h1>Wedding Attire:</h1>
+                    <h4>Wedding Attire:</h4>
                     <p>Please dress in <strong>Cocktail Attire</strong>. Swimwear/trunks is not acceptable.</p>
-                    <strong>Beach Ceremony:</strong>
+                    <h4>Beach Ceremony:</h4>
                     <p>There will be an area to take off your shoes/sandals before being seated in the sand, if desired.
 After the group photo (surprise) is taken, there will be about 30 minutes in between the ceremony and the cocktail hour. This will give you plenty of time to freshen up, change or switch shoes if desired. </p>
-                    <strong>Reception:</strong>
+                    <h4>Reception:</h4>
                     <p>The reception is outdoors. Bring a jacket or shawl in case it is breezy.  Pants are preferred for men but not required.</p>
                 </div>
             </div>
